[package]
name = "op-proc"
version = "0.1.0"
edition = "2024"
description = "proc macro for op"
keywords = ["proc-macro"]
repository = "https://github.com/cradiy/op-proc.git"
license = "Unlicense"
[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.94"
quote = "1.0.39"
syn = {version ="2.0.99", features = ["full"]}
